sandbox/kube/manifests/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: k3d-local
spec:
  ports:
    - port: 9092
      protocol: TCP
      targetPort: 9092
      name: kafka
    - port: 9093
      protocol: TCP
      targetPort: 9093
      name: controller
  selector:
    app: kafka
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: k3d-local
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: bitnami/kafka:3.3.2
          ports:
            - containerPort: 9092
            - containerPort: 9093
      volumeMounts:
        - mountPath: /bitnami/kafka
          name: data
        - mountPath: /opt/bitnami/kafka/logs
          name: logs
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
    - metadata:
        name: logs
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
