sandbox/kube/manifests/whoami.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: whoami-en
#   namespace: k3d-local
# spec:
#   type: ExternalName
#   externalName: whoami.k3d.internal
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: whoami-np
#   namespace: k3d-local
# spec:
#   type: NodePort
#   ports:
#     - port: 8080
#       protocol: TCP
#       targetPort: 80
#       nodePort: 30080
#   selector:
#     app: whoami
---
# can access `curl k3d-mycluster-server-0:8080` in same network docker
apiVersion: v1
kind: Service
metadata:
  name: whoami-lb
  namespace: k3d-local
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
  selector:
    app: whoami
  # externalIPs:
  #   - 172.28.10.100
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: k3d-local
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
  selector:
    app: whoami
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: k3d-local
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: containous/whoami
          ports:
            - containerPort: 80
